--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "embla-carousel-vue": "^8.3.1",
     "lucide-vue-next": "^0.456.0",
     "nuxt": "^3.14.159",
-    "nuxt-icon": "^1.0.0-beta.7",
     "radix-vue": "^1.9.9",
     "shadcn-nuxt": "^0.11.2",
     "tailwind-merge": "^2.5.4",
@@ -34,7 +33,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@iconify-json/logos": "^1.2.3",
+    "@iconify-json/lucide": "^1.2.14",
+    "@nuxt/icon": "^1.7.5",
     "@nuxtjs/color-mode": "^3.5.2",
+    "nuxt-icon": "^1.0.0-beta.7",
     "typescript": "^5.6.3"
   }
 }
